@@ -29,6 +29,8 @@ Version 0.7.5 UNRELEASED
 
   * [curses] Show hostname on header line (Closes: #398101)
 
+  * Log now distinguishes between remove and purge (Closes: #705612)
+
 - Bug fixes:
 
   * [cmdline] Fix problems in 'build-depends' causing malfunctions
